--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "Mba.ux.",
-    "version": "0.0.2",
+    "name": "Mba.ux.ImageViewer",
+    "version": "0.0.4",
     "dependencies": {
         "gulp": "^3.8.8",
         "gulp-jshint": "https://github.com/bluebile/gulp-jshint.git",
